--- a/example/test/assets/index.html
+++ b/example/test/assets/index.html
@@ -1,14 +1,7 @@
-<!doctype html>
-
-<html lang="en">
+<!--ssr-->
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--ssr-head-->
+
   </head>
-  <body>
-    <div id="app"><!--ssr-body--></div>
-    <script type="module" src="http://localhost:4100/src/entry.client.tsx"></script>
-  </body>
+  <body></body>
 </html>
