--- a/example/test/assets/index.html
+++ b/example/test/assets/index.html
@@ -3,5 +3,7 @@
   <head>
 
   </head>
-  <body></body>
+  <body>
+    <script type="module" src="/src/entry.client.jsx"></script>
+  </body>
 </html>
